got category titles to work

--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -12,6 +12,8 @@
 
   <tbody>
     <% @categories.each do |category| %>
+    <div class="field">
+    </div>
       <tr>
         <td><%= category.category %></td>
         <td><%= link_to 'Show', category %></td>
